--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-env": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
+    "gulp-clean-css": "^3.9.2",
     "gulp-cli": "^2.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
